feat: use batch mapping